--- a/src/Html2Markdown/Html2Markdown.csproj
+++ b/src/Html2Markdown/Html2Markdown.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
+    <DebugType>full</DebugType>
     <Authors>Simon Baynes</Authors>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/baynezy/Html2Markdown</PackageProjectUrl>
